syntax = "proto3";

option csharp_namespace = "UserService";

package user_service;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

service UserService {

  rpc RegisterDoctor(RegisterDoctorRequest) returns (RegisterDoctorResponse) {
    option (google.api.http) = {
      post: "/register/doctor",
      body: "*"
    };
  }
  rpc RegisterPatient(RegisterPatientRequest) returns (RegisterPatientResponse) {
    option (google.api.http) = {
      post: "/register/patient",
      body: "*"
    };
  };
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/login",
      body: "*"
    };
  };
}

message ErrorResponse {
  uint32 status = 1;
  string title = 2;
  string detail = 3;
}

message RegisterDoctorRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string surname = 4;
  google.protobuf.Timestamp date_of_birth = 5;
}

message RegisterDoctorResponse {
  oneof response {
    google.protobuf.Empty success = 1;
    ErrorResponse error = 2;
  }
}

message RegisterPatientRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string surname = 4;
  google.protobuf.Timestamp date_of_birth = 5;
}

message RegisterPatientResponse {
  oneof response {
    google.protobuf.Empty success = 1;
    ErrorResponse error = 2;
  }
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  oneof response {
    SuccessLoginResponse success = 1;
    ErrorResponse error = 2;
  }
}

message SuccessLoginResponse {
  string token = 1;
  repeated string roles = 2;
}





